--- a/app/static/style.css
+++ b/app/static/style.css
@@ -632,6 +632,10 @@ video {
   z-index: 10;
 }
 
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -695,6 +699,10 @@ video {
 
 .table-row {
   display: table-row;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -796,6 +804,10 @@ video {
   list-style-type: none;
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -810,6 +822,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
