--- a/app/static/style.css
+++ b/app/static/style.css
@@ -717,6 +717,10 @@ video {
   height: 0.5rem;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
 .h-4 {
   height: 1rem;
 }
@@ -826,6 +830,10 @@ video {
   flex-direction: column;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
 }
@@ -840,6 +848,10 @@ video {
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-px {
+  gap: 1px;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1285,6 +1297,44 @@ video {
   text-decoration-thickness: 2px;
   text-underline-offset: 2px;
   /* Use a distinct style like a dotted underline */
+}
+
+/* --- Visual Document Map Styles --- */
+
+.map-segment {
+  flex-grow: 1;
+  cursor: pointer;
+  transition-property: all;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* Default background can be set here or rely on JS adding color classes */
+  /* background-color: theme('colors.gray.500'); */
+}
+
+.map-segment:hover {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(96 165 250 / var(--tw-ring-opacity, 1));
+  --tw-ring-offset-width: 1px;
+  --tw-ring-offset-color: #374151;
+  /* Add a ring on hover */
+  transform: scaleY(1.05);
+  /* Slightly scale up on hover */
+}
+
+/* --- Quill Highlight for Map Hover --- */
+
+.dark .ql-editor .highlight-map-hover {
+  /* Use !important cautiously but might be needed to override Quill's inline background */
+  /* Apply !important prefix directly to the utility */
+  border-radius: 0.125rem;
+  background-color: rgb(250 204 21 / 0.3) !important;
+  outline-style: solid;
+  outline-width: 2px;
+  outline-offset: 1px;
+  outline-color: #facc15;
 }
 
 .hover\:scale-y-125:hover {
